try to fix dark mode

--- a/assets/styles/universal.css
+++ b/assets/styles/universal.css
@@ -1,4 +1,6 @@
 :root {
+    color-scheme: light only;
+
     --mellow-apricot: #F1C380;
     --dark-chestnut: #916958;
 
